--- a/_posts/2011-09-23-markdown.md
+++ b/_posts/2011-09-23-markdown.md
@@ -39,7 +39,7 @@ keywords: Markdown
   </tbody>
   <tbody>
     <tr>
-      <td>h1标签</hd>
+      <td>h1标签</td>
       <td>    #标签</td>
       <td>#我是h1
           =========
@@ -47,7 +47,7 @@ keywords: Markdown
       </td>
     </tr>
     <tr>
-      <td>ul标签</hd>
+      <td>ul标签</td>
       <td>    * 标签</td>
       <td>  </td>
     </tr>
