--- a/_posts/2014-02-07-unity-cn.md
+++ b/_posts/2014-02-07-unity-cn.md
@@ -1,9 +1,10 @@
 ---
-layout:post
-title:Unity3D命令手册
-description:主要对Unity3D的所有菜单与参数进行了翻译 并逐个讲解,来帮助大家初步的认识Unity3D的每个命令的作用
-keywords:unity
+layout: post
+title: Unity3D命令手册
+description: 主要对Unity3D的所有菜单与参数进行了翻译 并逐个讲解,来帮助大家初步的认识Unity3D的每个命令的作用.
+keywords: unity
 ---
+        
 #Unity3D命令手册
 
 这本书 主要对Unity3D的所有菜单与参数进行了翻译 并逐个讲解
