--- a/_posts/2014-02-07-unity-cn.md
+++ b/_posts/2014-02-07-unity-cn.md
@@ -4,7 +4,7 @@ title: Unity3D命令手册
 description: 主要对Unity3D的所有菜单与参数进行了翻译 并逐个讲解,来帮助大家初步的认识Unity3D的每个命令的作用.
 keywords: unity
 ---
-        
+
 #Unity3D命令手册
 
 这本书 主要对Unity3D的所有菜单与参数进行了翻译 并逐个讲解
@@ -117,9 +117,9 @@ Report a Problem        问题反馈
 </pre>
 
 
-第一章File（文件）
+<h2>第一章File（文件）</h2>
 
-
+<pre>
 New Scene 新建场景
 创建一个新的游戏场景
 Open Scene 打开场景
@@ -140,22 +140,15 @@ Build & Run 建造并运行
 设置并导出游戏
 Exit退出
 退出软件
-
+</pre>
 这里面我们需要注意的是，创建一个场景与创建一个工程是完全不同的，一个工程文件可以包含多个游戏场景，但场景文件却是唯一的。工程文件就相当于整个游戏文件，而场景文件就相当于游戏中的每一关。
 例如我们要做一个通关游戏，我们就可以创建一个工程文件，这个工程下的游戏场景就是游戏中的每一关的场景。
 一定要记住，适时的保存游戏场景，这样当软件或系统报错等意外发生时，我们就可以避免大量的损失。
 
 
 
-
-
-
-
-
-
-
-
-第二章Edit（编辑）
+<h2>第二章Edit（编辑）</h2>
+<pre>
 Undo 插销
 撤销上一步命令
 Redo 重复
@@ -176,7 +169,9 @@ Select All 选择全部
 选中全部对象
 Preferences 参数选择
 对以下参数进行设定
-
+</pre>
+<img src="../images/arc/2014-02-07_101645_preferences.jpg">
+<pre>
 General 总体设置
 --External Script Editor外部脚本编辑器
 ====Use built-in editor(UniSciTE) 使用内置的编辑器（UniSciTE）
@@ -224,7 +219,7 @@ Keys 快捷键设置
 
 Use Defaults 恢复初始状态
 
-
+</pre>
 
 
 
