--- a/_posts/2014-02-07-unity-cn.md
+++ b/_posts/2014-02-07-unity-cn.md
@@ -170,8 +170,9 @@ Select All 选择全部
 Preferences 参数选择
 对以下参数进行设定
 </pre>
-<img src="images/arc/2014-02-07_101645_preferences.jpg">
+<img src="http://anryzhang.github.io/myBlog/images/arc/2014-02-07_101645_preferences.jpg">
 <pre>
+
 General 总体设置
 --External Script Editor外部脚本编辑器
 ====Use built-in editor(UniSciTE) 使用内置的编辑器（UniSciTE）
