--- a/_posts/2014-02-07-unity-cn.md
+++ b/_posts/2014-02-07-unity-cn.md
@@ -184,7 +184,7 @@ General 总体设置
 --Auto Refresh自动刷新
 --Show Project Wizard at Startup 启动时显示工程向导
 --Compress textures when importing 在导入纹理时进行压缩
-
+<img src="http://anryzhang.github.io/myBlog/images/arc/2014-02-07_102556_color.jpg">
 Colors 颜色设置
 --General通用
 ====Playmode tint 游戏状态窗口颜色
