--- a/_posts/2014-02-08-js-jquery.md
+++ b/_posts/2014-02-08-js-jquery.md
@@ -31,7 +31,7 @@ var els = $('.el');
 创建元素（Create elements）
 <pre>
 // jQuery
-var newEl = $('<div/>');
+var newEl = $('&lt;div/&gt;');
 
 // Native
 var newEl = document.createElement('div');
@@ -77,7 +77,7 @@ document.querySelector('.el').classList.toggle('class');
 增补（Append）
 <pre>
 // jQuery
-$('.el').append($('<div/>'));
+$('.el').append($('&lt;div/&gt;'));
 
 // Native
 document.querySelector('.el').appendChild(document.createElement('div'));
