--- a/_posts/2014-02-08-html-mark.md
+++ b/_posts/2014-02-08-html-mark.md
@@ -1,65 +1,65 @@
 ---
 layout: post
-title:IEÌõ¼ş×¢ÊÍ
-description:IEÌõ¼ş×¢ÊÍ
-keywords:IEÌõ¼ş×¢ÊÍ
+title:IEæ¡ä»¶æ³¨é‡Š
+description:IEæ¡ä»¶æ³¨é‡Š
+keywords:IEæ¡ä»¶æ³¨é‡Š
 ---
 <div class="articleCot">
     <p style="text-align:center;">
         <img src="http://cms.9tech.cn/uploads/allimg/131226/1053444O4-0.jpg" width="715" alt="t0188a564d3ecacaf78.jpg" title="t0188a564d3ecacaf78.jpg">
     </p>
     <p>
-        Èç¹ûÍæ¹ıÌõ¼ş×¢ÊÍµÄ£¬¿ÉÒÔºöÂÔÒÔÏÂ»ù´¡½éÉÜ¡£
+        å¦‚æœç©è¿‡æ¡ä»¶æ³¨é‡Šçš„ï¼Œå¯ä»¥å¿½ç•¥ä»¥ä¸‹åŸºç¡€ä»‹ç»ã€‚
     </p>
     <p>
-        IEÌõ¼ş×¢ÊÍ£¨Conditional comments£©ÊÇIEä¯ÀÀÆ÷Ë½ÓĞµÄ´úÂë£¬ÊÇÒ»¸öÀàËÆIFÅĞ¶ÏµÄÓï·¨×¢ÊÍ¿é£¬IE5Ö®ÉÏÖ§³Ö¡£
+        IEæ¡ä»¶æ³¨é‡Šï¼ˆConditional commentsï¼‰æ˜¯IEæµè§ˆå™¨ç§æœ‰çš„ä»£ç ï¼Œæ˜¯ä¸€ä¸ªç±»ä¼¼IFåˆ¤æ–­çš„è¯­æ³•æ³¨é‡Šå—ï¼ŒIE5ä¹‹ä¸Šæ”¯æŒã€‚
     </p>
     <p>
-        ´úÂë¿´ÆğÀ´ÊÇÕâÑùµÄ
+        ä»£ç çœ‹èµ·æ¥æ˜¯è¿™æ ·çš„
     </p>
-    <div><div id="highlighter_611144" class="syntaxhighlighter  html"><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td class="gutter"><div class="line number1 index0 alt2">1</div><div class="line number2 index1 alt1">2</div><div class="line number3 index2 alt2">3</div></td><td class="code"><div class="container"><div class="line number1 index0 alt2"><code class="html comments">&lt;!--[if IE 6]&gt;</code></div><div class="line number2 index1 alt1"><code class="html comments">ÄãÕıÔÚÊ¹ÓÃIE6</code></div><div class="line number3 index2 alt2"><code class="html comments">&lt;![endif]--&gt;</code></div></div></td></tr></tbody></table></div></div>
+    <div><div id="highlighter_611144" class="syntaxhighlighter  html"><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td class="gutter"><div class="line number1 index0 alt2">1</div><div class="line number2 index1 alt1">2</div><div class="line number3 index2 alt2">3</div></td><td class="code"><div class="container"><div class="line number1 index0 alt2"><code class="html comments">&lt;!--[if IE 6]&gt;</code></div><div class="line number2 index1 alt1"><code class="html comments">ä½ æ­£åœ¨ä½¿ç”¨IE6</code></div><div class="line number3 index2 alt2"><code class="html comments">&lt;![endif]--&gt;</code></div></div></td></tr></tbody></table></div></div>
     <p>
-        <span style="line-height:1.5;font-size:10pt;">ËûµÄÓï·¨ÊÇÒ»¸öÆÕÍ¨µÄHTML×¢ÊÍ &lt;!¨C comments ¨C&gt;£¬·ÖÖ§¿éÒÔ [if Ìõ¼ş(conditional)]&gt; ¿ªÊ¼ &lt;![endif]½áÊø¡£Ìõ¼şºÍJSÖĞµÄifºÜÀàËÆ£¬²¼¶ûÖµÀàĞÍ£¬¿ÉÒÔ°Ñä¯ÀÀÆ÷ÌØĞÔ×÷ÎªÌõ¼ş£¬±ÈÈçIE £¬IE 6£¬ IE 7 £¬´ËÍâ»¹Ö§³Ö ·Ç(!) ¡¢Óë(&amp;) ¡¢»ò(|)¡¢ À¨ºÅ¡¢ ´óÓÚ(gt)¡¢ ´óÓÚµÈÓÚ(gte)¡¢ Ğ¡ÓÚ(le) ¡¢ Ğ¡ÓÚµÈÓÚ(lte)¡£</span>
+        <span style="line-height:1.5;font-size:10pt;">ä»–çš„è¯­æ³•æ˜¯ä¸€ä¸ªæ™®é€šçš„HTMLæ³¨é‡Š &lt;!â€“ comments â€“&gt;ï¼Œåˆ†æ”¯å—ä»¥ [if æ¡ä»¶(conditional)]&gt; å¼€å§‹ &lt;![endif]ç»“æŸã€‚æ¡ä»¶å’ŒJSä¸­çš„ifå¾ˆç±»ä¼¼ï¼Œå¸ƒå°”å€¼ç±»å‹ï¼Œå¯ä»¥æŠŠæµè§ˆå™¨ç‰¹æ€§ä½œä¸ºæ¡ä»¶ï¼Œæ¯”å¦‚IE ï¼ŒIE 6ï¼Œ IE 7 ï¼Œæ­¤å¤–è¿˜æ”¯æŒ é(!) ã€ä¸(&amp;) ã€æˆ–(|)ã€ æ‹¬å·ã€ å¤§äº(gt)ã€ å¤§äºç­‰äº(gte)ã€ å°äº(le) ã€ å°äºç­‰äº(lte)ã€‚</span>
     </p>
     <p>
-        Ö±¹ÛµÄ´úÂëÈçÏÂ£º
+        ç›´è§‚çš„ä»£ç å¦‚ä¸‹ï¼š
     </p>
     <div><div id="highlighter_45956" class="syntaxhighlighter  html"><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td class="gutter"><div class="line number1 index0 alt2">1</div><div class="line number2 index1 alt1">2</div><div class="line number3 index2 alt2">3</div><div class="line number4 index3 alt1">4</div><div class="line number5 index4 alt2">5</div><div class="line number6 index5 alt1">6</div><div class="line number7 index6 alt2">7</div><div class="line number8 index7 alt1">8</div><div class="line number9 index8 alt2">9</div><div class="line number10 index9 alt1">10</div><div class="line number11 index10 alt2">11</div><div class="line number12 index11 alt1">12</div><div class="line number13 index12 alt2">13</div><div class="line number14 index13 alt1">14</div><div class="line number15 index14 alt2">15</div><div class="line number16 index15 alt1">16</div><div class="line number17 index16 alt2">17</div><div class="line number18 index17 alt1">18</div><div class="line number19 index18 alt2">19</div><div class="line number20 index19 alt1">20</div><div class="line number21 index20 alt2">21</div><div class="line number22 index21 alt1">22</div><div class="line number23 index22 alt2">23</div><div class="line number24 index23 alt1">24</div><div class="line number25 index24 alt2">25</div><div class="line number26 index25 alt1">26</div><div class="line number27 index26 alt2">27</div><div class="line number28 index27 alt1">28</div><div class="line number29 index28 alt2">29</div><div class="line number30 index29 alt1">30</div><div class="line number31 index30 alt2">31</div><div class="line number32 index31 alt1">32</div></td><td class="code"><div class="container"><div class="line number1 index0 alt2"><code class="html plain">&lt;</code><code class="html keyword">p</code> <code class="html color1">class</code><code class="html plain">=</code><code class="html string">"accent"</code><code class="html plain">&gt;</code></div><div class="line number2 index1 alt1"><code class="html comments">&lt;!--[if IE]&gt;</code></div><div class="line number3 index2 alt2"><code class="html comments">According to the conditional comment this is IE&lt;br /&gt;</code></div><div class="line number4 index3 alt1"><code class="html comments">&lt;![endif]--&gt;</code></div><div class="line number5 index4 alt2"><code class="html comments">&lt;!--[if IE 6]&gt;</code></div><div class="line number6 index5 alt1"><code class="html comments">According to the conditional comment this is IE 6&lt;br /&gt;</code></div><div class="line number7 index6 alt2"><code class="html comments">&lt;![endif]--&gt;</code></div><div class="line number8 index7 alt1"><code class="html comments">&lt;!--[if IE 7]&gt;</code></div><div class="line number9 index8 alt2"><code class="html comments">According to the conditional comment this is IE 7&lt;br /&gt;</code></div><div class="line number10 index9 alt1"><code class="html comments">&lt;![endif]--&gt;</code></div><div class="line number11 index10 alt2"><code class="html comments">&lt;!--[if IE 8]&gt;</code></div><div class="line number12 index11 alt1"><code class="html comments">According to the conditional comment this is IE 8&lt;br /&gt;</code></div><div class="line number13 index12 alt2"><code class="html comments">&lt;![endif]--&gt;</code></div><div class="line number14 index13 alt1"><code class="html comments">&lt;!--[if IE 9]&gt;</code></div><div class="line number15 index14 alt2"><code class="html comments">According to the conditional comment this is IE 9&lt;br /&gt;</code></div><div class="line number16 index15 alt1"><code class="html comments">&lt;![endif]--&gt;</code></div><div class="line number17 index16 alt2"><code class="html comments">&lt;!--[if gte IE 8]&gt;</code></div><div class="line number18 index17 alt1"><code class="html comments">According to the conditional comment this is IE 8 or higher&lt;br /&gt;</code></div><div class="line number19 index18 alt2"><code class="html comments">&lt;![endif]--&gt;</code></div><div class="line number20 index19 alt1"><code class="html comments">&lt;!--[if lt IE 9]&gt;</code></div><div class="line number21 index20 alt2"><code class="html comments">According to the conditional comment this is IE lower than 9&lt;br /&gt;</code></div><div class="line number22 index21 alt1"><code class="html comments">&lt;![endif]--&gt;</code></div><div class="line number23 index22 alt2"><code class="html comments">&lt;!--[if lte IE 7]&gt;</code></div><div class="line number24 index23 alt1"><code class="html comments">According to the conditional comment this is IE lower or equal to 7&lt;br /&gt;</code></div><div class="line number25 index24 alt2"><code class="html comments">&lt;![endif]--&gt;</code></div><div class="line number26 index25 alt1"><code class="html comments">&lt;!--[if gt IE 6]&gt;</code></div><div class="line number27 index26 alt2"><code class="html comments">According to the conditional comment this is IE greater than 6&lt;br /&gt;</code></div><div class="line number28 index27 alt1"><code class="html comments">&lt;![endif]--&gt;</code></div><div class="line number29 index28 alt2"><code class="html comments">&lt;!--[if !IE]&gt; --&gt;</code></div><div class="line number30 index29 alt1"><code class="html plain">According to the conditional comment this is not IE&lt;</code><code class="html keyword">br</code> <code class="html plain">/&gt;</code></div><div class="line number31 index30 alt2"><code class="html comments">&lt;!-- &lt;![endif]--&gt;</code></div><div class="line number32 index31 alt1"><code class="html plain">&lt;/</code><code class="html keyword">p</code><code class="html plain">&gt;</code></div></div></td></tr></tbody></table></div></div>
     <p>
-        <span style="line-height:1.5;font-size:10pt;">¸üÏêÏ¸µÄĞÅÏ¢¿ÉÒÔÔÚÎ¢ÈíMSDNÎÄµµÖĞ²é¿´</span>
+        <span style="line-height:1.5;font-size:10pt;">æ›´è¯¦ç»†çš„ä¿¡æ¯å¯ä»¥åœ¨å¾®è½¯MSDNæ–‡æ¡£ä¸­æŸ¥çœ‹</span>
     </p>
     <p>
         <a href="http://msdn.microsoft.com/en-us/library/ms537512.aspx" target="_blank">http://msdn.microsoft.com/en-us/library/ms537512.aspx</a>
     </p>
     <p>
-        »ù´¡½éÉÜÍê±Ï£¬Õâ¸ö¶«Î÷¿ÉÒÔ×öIEä¯ÀÀÆ÷¼ì²â£¬ËùÒÔ±ä³ÉÁËCSS¼æÈİ¶à°æ±¾ä¯ÀÀÆ÷µÄ·½°¸Ö®Ò»¡£
+        åŸºç¡€ä»‹ç»å®Œæ¯•ï¼Œè¿™ä¸ªä¸œè¥¿å¯ä»¥åšIEæµè§ˆå™¨æ£€æµ‹ï¼Œæ‰€ä»¥å˜æˆäº†CSSå…¼å®¹å¤šç‰ˆæœ¬æµè§ˆå™¨çš„æ–¹æ¡ˆä¹‹ä¸€ã€‚
     </p>
     <p>
-        ×îÆÕ±éÊ¹ÓÃ³¡¾°
+        æœ€æ™®éä½¿ç”¨åœºæ™¯
     </p>
     <div><div id="highlighter_12007" class="syntaxhighlighter  html"><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td class="gutter"><div class="line number1 index0 alt2">1</div><div class="line number2 index1 alt1">2</div><div class="line number3 index2 alt2">3</div><div class="line number4 index3 alt1">4</div><div class="line number5 index4 alt2">5</div><div class="line number6 index5 alt1">6</div><div class="line number7 index6 alt2">7</div><div class="line number8 index7 alt1">8</div><div class="line number9 index8 alt2">9</div></td><td class="code"><div class="container"><div class="line number1 index0 alt2"><code class="html comments">&lt;!--[if IE 8]&gt;</code></div><div class="line number2 index1 alt1"><code class="html comments">&lt;link href="ie8.css" rel="stylesheet" type="text/css" media="screen" /&gt;</code></div><div class="line number3 index2 alt2"><code class="html comments">&lt;![endif]--&gt;</code></div><div class="line number4 index3 alt1"><code class="html comments">&lt;!--[if IE 7]&gt;</code></div><div class="line number5 index4 alt2"><code class="html comments">&lt;link href="ie7.css" rel="stylesheet" type="text/css" media="screen" /&gt;</code></div><div class="line number6 index5 alt1"><code class="html comments">&lt;![endif]--&gt;</code></div><div class="line number7 index6 alt2"><code class="html comments">&lt;!--[if lt IE 7]&gt;</code></div><div class="line number8 index7 alt1"><code class="html comments">&lt;link href="ie7lt.css" rel="stylesheet" type="text/css" media="screen" /&gt;</code></div><div class="line number9 index8 alt2"><code class="html comments">&lt;![endif]--&gt;</code></div></div></td></tr></tbody></table></div></div>
     <p>
-        <span style="line-height:1.5;font-size:10pt;">¼È¿ÉÒÔ½â¾öä¯ÀÀÆ÷²îÒì£¬»¹¿ÉÒÔ±£Ö¤CSSµÄ±ê×¼»¯£¬±ÜÃâÁËºÜ¶àË½ÓĞCSSÊôĞÔ×÷ÎªhackµÄ·½Ê½¡£</span>
+        <span style="line-height:1.5;font-size:10pt;">æ—¢å¯ä»¥è§£å†³æµè§ˆå™¨å·®å¼‚ï¼Œè¿˜å¯ä»¥ä¿è¯CSSçš„æ ‡å‡†åŒ–ï¼Œé¿å…äº†å¾ˆå¤šç§æœ‰CSSå±æ€§ä½œä¸ºhackçš„æ–¹å¼ã€‚</span>
     </p>
     <p>
-        ¿ÉÊÇÕâÑù»áÔö¼Ó¹ı¶àµÄÎÄ¼ş¼ÓÔØ£¬Î¬»¤´úÂëÊıÁ¿Ò²Ôö¼Ó£¬ÓĞÃ»ÓĞ¸üºÃµÄ·½Ê½?
+        å¯æ˜¯è¿™æ ·ä¼šå¢åŠ è¿‡å¤šçš„æ–‡ä»¶åŠ è½½ï¼Œç»´æŠ¤ä»£ç æ•°é‡ä¹Ÿå¢åŠ ï¼Œæœ‰æ²¡æœ‰æ›´å¥½çš„æ–¹å¼?
     </p>
     <p>
-        Ê¹ÓÃ³¡¾°2
+        ä½¿ç”¨åœºæ™¯2
     </p>
     <div><div id="highlighter_331882" class="syntaxhighlighter  html"><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td class="gutter"><div class="line number1 index0 alt2">1</div><div class="line number2 index1 alt1">2</div><div class="line number3 index2 alt2">3</div><div class="line number4 index3 alt1">4</div></td><td class="code"><div class="container"><div class="line number1 index0 alt2"><code class="html comments">&lt;!--[if lt IE 7]&gt;&lt;html class="ie6 oldie" lang="zh"&gt;&lt;![endif]--&gt;</code></div><div class="line number2 index1 alt1"><code class="html comments">&lt;!--[if IE 7]&gt;&lt;html class="ie7 oldie" lang="zh"&gt;&lt;![endif]--&gt;</code></div><div class="line number3 index2 alt2"><code class="html comments">&lt;!--[if IE 8]&gt;&lt;html class="ie8 oldie" lang="zh"&gt;&lt;![endif]--&gt;</code></div><div class="line number4 index3 alt1"><code class="html comments">&lt;!--[if gt IE 8]&gt;&lt;!--&gt;</code> <code class="html plain">&lt;</code><code class="html keyword">html</code> <code class="html color1">lang</code><code class="html plain">=</code><code class="html string">"zh"</code><code class="html plain">&gt; </code><code class="html comments">&lt;!--&lt;![endif]--&gt;</code></div></div></td></tr></tbody></table></div></div>
     <p>
-        <span style="line-height:1.5;font-size:10pt;">³¡¾°1ÖĞµÄÎÊÌâ¾Í½â¾öÁË¡£Í¨¹ıÑ¡ÔñÆ÷µÄÓÅÏÈ¼¶¾Í¿ÉÒÔÇáËÉ½â¾ö²îÒì¡£</span>
+        <span style="line-height:1.5;font-size:10pt;">åœºæ™¯1ä¸­çš„é—®é¢˜å°±è§£å†³äº†ã€‚é€šè¿‡é€‰æ‹©å™¨çš„ä¼˜å…ˆçº§å°±å¯ä»¥è½»æ¾è§£å†³å·®å¼‚ã€‚</span>
     </p>
     <p>
-        ÓĞÁËÌõ¼ş×¢ÊÍ£¬JSÒ²ÄÜ´Ó×Ü»ñÒæ£¬ÃâÈ¥µÄÍ¨¹ıJSÈ¥ÅĞ¶Ïä¯ÀÀÆ÷ÀàĞÍºÍ°æ±¾ÁË¡£
+        æœ‰äº†æ¡ä»¶æ³¨é‡Šï¼ŒJSä¹Ÿèƒ½ä»æ€»è·ç›Šï¼Œå…å»çš„é€šè¿‡JSå»åˆ¤æ–­æµè§ˆå™¨ç±»å‹å’Œç‰ˆæœ¬äº†ã€‚
     </p>
     <p>
-        ±ÈÈç£ºÈç¹ûÄãµÄÒ³ÃæÏëÊ¹ÓÃhtml5±êÇ©£¬Ìõ¼ş×¢ÊÍÒ²ÄÜ·¢»Ó×÷ÓÃ¡£
+        æ¯”å¦‚ï¼šå¦‚æœä½ çš„é¡µé¢æƒ³ä½¿ç”¨html5æ ‡ç­¾ï¼Œæ¡ä»¶æ³¨é‡Šä¹Ÿèƒ½å‘æŒ¥ä½œç”¨ã€‚
     </p>
     <div><div id="highlighter_172128" class="syntaxhighlighter  html"><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td class="gutter"><div class="line number1 index0 alt2">1</div><div class="line number2 index1 alt1">2</div><div class="line number3 index2 alt2">3</div><div class="line number4 index3 alt1">4</div><div class="line number5 index4 alt2">5</div><div class="line number6 index5 alt1">6</div><div class="line number7 index6 alt2">7</div><div class="line number8 index7 alt1">8</div><div class="line number9 index8 alt2">9</div><div class="line number10 index9 alt1">10</div><div class="line number11 index10 alt2">11</div><div class="line number12 index11 alt1">12</div></td><td class="code"><div class="container"><div class="line number1 index0 alt2"><code class="html comments">&lt;!--[if lte IE 8]&gt;</code></div><div class="line number2 index1 alt1"><code class="html comments">&lt;script&gt;</code></div><div class="line number3 index2 alt2"><code class="html comments">(function(){</code></div><div class="line number4 index3 alt1"><code class="html spaces">&nbsp;&nbsp;&nbsp;&nbsp;</code><code class="html comments">var e = "abbr,article,aside,audio,canvas,datalist,details,dialog,eventsource,figure,</code></div><div class="line number5 index4 alt2"><code class="html comments">footer,header,hgroup,mark,menu,meter,nav,output,progress,section,time,video".split(','),</code></div><div class="line number6 index5 alt1"><code class="html spaces">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</code><code class="html comments">i= e.length; </code></div><div class="line number7 index6 alt2"><code class="html spaces">&nbsp;&nbsp;&nbsp;&nbsp;</code><code class="html comments">while(i--){</code></div><div class="line number8 index7 alt1"><code class="html spaces">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</code><code class="html comments">document.createElement(e[i]);</code></div><div class="line number9 index8 alt2"><code class="html spaces">&nbsp;&nbsp;&nbsp;&nbsp;</code><code class="html comments">}</code></div><div class="line number10 index9 alt1"><code class="html comments">})();</code></div><div class="line number11 index10 alt2"><code class="html comments">&lt;/script&gt;</code></div><div class="line number12 index11 alt1"><code class="html comments">&lt;![endif]--&gt;</code></div></div></td></tr></tbody></table></div></div>
     <p>
-        <span style="line-height:1.5;font-size:10pt;">ÔÙ±ÈÈç£ºIE6µÄ±³¾°Í¼Æ¬»º´æÎÊÌâ</span>
+        <span style="line-height:1.5;font-size:10pt;">å†æ¯”å¦‚ï¼šIE6çš„èƒŒæ™¯å›¾ç‰‡ç¼“å­˜é—®é¢˜</span>
     </p>
     <div>
 	<span style="line-height:1.5;">
@@ -67,21 +67,21 @@ keywords:IEÌõ¼ş×¢ÊÍ
 </span>
     </div>
     <p>
-        <span style="line-height:1.5;font-size:10pt;">ÉõÖÁ»¹¿ÉÒÔ°ïÖúJSÖ±½Ó»ñÈ¡ä¯ÀÀÆ÷ĞÅÏ¢£¬´ó¶àÊı¿âºÍ·½°¸Ê¶±ğä¯ÀÀÆ÷¶¼ÊÇÍ¨¹ıuserAgent´®´¦ÀíµÄ£¬¶øÇÒ´ó²¿·ÖµÄÓ¦ÓÃ³¡¾°Ò²ÊÇif £¨IExx£© {doxx}</span>
+        <span style="line-height:1.5;font-size:10pt;">ç”šè‡³è¿˜å¯ä»¥å¸®åŠ©JSç›´æ¥è·å–æµè§ˆå™¨ä¿¡æ¯ï¼Œå¤§å¤šæ•°åº“å’Œæ–¹æ¡ˆè¯†åˆ«æµè§ˆå™¨éƒ½æ˜¯é€šè¿‡userAgentä¸²å¤„ç†çš„ï¼Œè€Œä¸”å¤§éƒ¨åˆ†çš„åº”ç”¨åœºæ™¯ä¹Ÿæ˜¯if ï¼ˆIExxï¼‰ {doxx}</span>
     </p>
     <div><div id="highlighter_249559" class="syntaxhighlighter  js"><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td class="gutter"><div class="line number1 index0 alt2">1</div><div class="line number2 index1 alt1">2</div><div class="line number3 index2 alt2">3</div><div class="line number4 index3 alt1">4</div><div class="line number5 index4 alt2">5</div><div class="line number6 index5 alt1">6</div></td><td class="code"><div class="container"><div class="line number1 index0 alt2"><code class="js keyword">function</code> <code class="js plain">isIE(v){</code></div><div class="line number2 index1 alt1"><code class="js spaces">&nbsp;&nbsp;&nbsp;&nbsp;</code><code class="js keyword">var</code> <code class="js plain">v = v || </code><code class="js string">""</code><code class="js plain">,</code></div><div class="line number3 index2 alt2"><code class="js spaces">&nbsp;&nbsp;&nbsp;&nbsp;</code><code class="js plain">tester = document.createElement(</code><code class="js string">'div'</code><code class="js plain">);</code></div><div class="line number4 index3 alt1"><code class="js spaces">&nbsp;&nbsp;&nbsp;&nbsp;</code><code class="js plain">tester.innerHTML = </code><code class="js string">'&lt;!--[if IE '</code> <code class="js plain">+ v + </code><code class="js string">']&gt;&lt;i&gt;&lt;/i&gt;&lt;![endif]--&gt;'</code><code class="js plain">;</code></div><div class="line number5 index4 alt2"><code class="js spaces">&nbsp;&nbsp;&nbsp;&nbsp;</code><code class="js keyword">return</code> <code class="js plain">!!tester.getElementsByTagName(</code><code class="js string">'i'</code><code class="js plain">)[0];</code></div><div class="line number6 index5 alt1"><code class="js plain">}</code></div></div></td></tr></tbody></table></div></div>
     <p>
         <span style="line-height:1.5;font-size:10pt;">form:&nbsp;</span><a href="http://ninofocus.com/2011/12/09/ie-browse-detect/" target="_blank" style="line-height:1.5;font-size:10pt;">http://ninofocus.com/2011/12/09/ie-browse-detect/</a>
     </p>
     <p>
-        »¹¿ÉÒÔÔÚHTML´úÂëÖĞÍæ
+        è¿˜å¯ä»¥åœ¨HTMLä»£ç ä¸­ç©
     </p>
-    <div><div id="highlighter_739105" class="syntaxhighlighter  html"><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td class="gutter"><div class="line number1 index0 alt2">1</div><div class="line number2 index1 alt1">2</div><div class="line number3 index2 alt2">3</div><div class="line number4 index3 alt1">4</div></td><td class="code"><div class="container"><div class="line number1 index0 alt2"><code class="html plain">&lt;</code><code class="html keyword">body</code><code class="html plain">&gt;</code></div><div class="line number2 index1 alt1"><code class="html comments">&lt;!--[if lte IE 8]&gt;</code></div><div class="line number3 index2 alt2"><code class="html comments">&lt;p&gt;Ç×°®µÄÓÃ»§£¬ÄúµÄä¯ÀÀÆ÷°æ±¾¹ıµÍ£¬½¨ÒéÄúÉı¼¶ä¯ÀÀÆ÷»ñµÃ¸üºÃµÄÌåÑé....&lt;/p&gt;</code></div><div class="line number4 index3 alt1"><code class="html comments">&lt;![endif]--&gt;</code></div></div></td></tr></tbody></table></div></div>
+    <div><div id="highlighter_739105" class="syntaxhighlighter  html"><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td class="gutter"><div class="line number1 index0 alt2">1</div><div class="line number2 index1 alt1">2</div><div class="line number3 index2 alt2">3</div><div class="line number4 index3 alt1">4</div></td><td class="code"><div class="container"><div class="line number1 index0 alt2"><code class="html plain">&lt;</code><code class="html keyword">body</code><code class="html plain">&gt;</code></div><div class="line number2 index1 alt1"><code class="html comments">&lt;!--[if lte IE 8]&gt;</code></div><div class="line number3 index2 alt2"><code class="html comments">&lt;p&gt;äº²çˆ±çš„ç”¨æˆ·ï¼Œæ‚¨çš„æµè§ˆå™¨ç‰ˆæœ¬è¿‡ä½ï¼Œå»ºè®®æ‚¨å‡çº§æµè§ˆå™¨è·å¾—æ›´å¥½çš„ä½“éªŒ....&lt;/p&gt;</code></div><div class="line number4 index3 alt1"><code class="html comments">&lt;![endif]--&gt;</code></div></div></td></tr></tbody></table></div></div>
     <p>
-        <span style="line-height:1.5;font-size:10pt;">»òĞí»¹ÓĞ¸ü¶àµÄÍæ·¨£¬¾ÍµÈ´ıÄúµÄ·¢ÏÖºÍ·ÖÏíÁË¡£</span>
+        <span style="line-height:1.5;font-size:10pt;">æˆ–è®¸è¿˜æœ‰æ›´å¤šçš„ç©æ³•ï¼Œå°±ç­‰å¾…æ‚¨çš„å‘ç°å’Œåˆ†äº«äº†ã€‚</span>
     </p>
     <p>
-        ×îºó£¬Ìõ¼ş×¢ÊÍÒ²²»½öÏŞÓÚHTMLÖĞ£¬JSÒ²¿ÉÒÔÓĞ£¬ÄÇ¾ÍÊÇJScriptµÄÌØĞÔÁË£¬ÕâÖÖ¿ÓµùµÄ¶«¶«»¹ÊÇÉÙÓÃµÄºÃ£¬ÒòÎªJSÖĞµÄ×¢ÊÍ×ÜÊÇÒª±»Ñ¹ËõµôµÄ¡£
+        æœ€åï¼Œæ¡ä»¶æ³¨é‡Šä¹Ÿä¸ä»…é™äºHTMLä¸­ï¼ŒJSä¹Ÿå¯ä»¥æœ‰ï¼Œé‚£å°±æ˜¯JScriptçš„ç‰¹æ€§äº†ï¼Œè¿™ç§å‘çˆ¹çš„ä¸œä¸œè¿˜æ˜¯å°‘ç”¨çš„å¥½ï¼Œå› ä¸ºJSä¸­çš„æ³¨é‡Šæ€»æ˜¯è¦è¢«å‹ç¼©æ‰çš„ã€‚
     </p>
     <div><div id="highlighter_472618" class="syntaxhighlighter  js"><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td class="gutter"><div class="line number1 index0 alt2">1</div><div class="line number2 index1 alt1">2</div><div class="line number3 index2 alt2">3</div><div class="line number4 index3 alt1">4</div><div class="line number5 index4 alt2">5</div></td><td class="code"><div class="container"><div class="line number1 index0 alt2"><code class="js plain">&lt;script&gt;</code></div><div class="line number2 index1 alt1"><code class="js comments">/*@cc_on</code></div><div class="line number3 index2 alt2"><code class="js spaces">&nbsp;&nbsp;</code><code class="js comments">document.write("You are using IE4 or higher");</code></div><div class="line number4 index3 alt1"><code class="js comments">@*/</code></div><div class="line number5 index4 alt2"><code class="js plain">&lt;/script&gt;</code></div></div></td></tr></tbody></table></div></div>
 </div>
