--- a/_posts/2014-02-08-html-mark.md
+++ b/_posts/2014-02-08-html-mark.md
@@ -4,6 +4,13 @@ title: IE条件注释
 description: IE条件注释
 keywords: IE条件注释
 ---
+
+<style>
+    .main-article code{
+        color: #008200 !important;
+        border: none;
+    }
+</style>
 <div class="articleCot">
     <p style="text-align:center;">
         <img src="http://cms.9tech.cn/uploads/allimg/131226/1053444O4-0.jpg" width="715" alt="t0188a564d3ecacaf78.jpg" title="t0188a564d3ecacaf78.jpg">
