--- a/_posts/2014-02-08-html-mark.md
+++ b/_posts/2014-02-08-html-mark.md
@@ -6,7 +6,7 @@ keywords: IE条件注释
 ---
 
 <style>
-    .main-article code{
+    .articleCot code{
         color: #008200 !important;
         border: none;
     }
