--- a/_posts/2014-02-08-html-mark.md
+++ b/_posts/2014-02-08-html-mark.md
@@ -5,13 +5,14 @@ description: IE条件注释
 keywords: IE条件注释
 ---
 
-<style>
-    .articleCot code{
-        color: #008200 !important;
-        border: none;
-    }
-</style>
+
 <div class="articleCot">
+    <style type="text/css">
+        .articleCot .syntaxhighlighter code{
+            color: #008200 !important;
+            border: none;
+        }
+    </style>
     <p style="text-align:center;">
         <img src="http://cms.9tech.cn/uploads/allimg/131226/1053444O4-0.jpg" width="715" alt="t0188a564d3ecacaf78.jpg" title="t0188a564d3ecacaf78.jpg">
     </p>
