--- a/_posts/2014-03-01-window.md
+++ b/_posts/2014-03-01-window.md
@@ -9,7 +9,7 @@ keywords: javascript,BOM,location,navigator
     窗口位置
 </h3>
 <p>
-    screenLeft和screenTop属性,分别用于表示窗口相对于屏幕左边和上边的位置.
+    screenLeft和screenTop属性,分别用于表示窗口相对于屏幕左边和上边的位置(ie,safari,opera,chrome).
     Firefox则在screenX和screenY属性中提供相同的窗口位置信息,Safari和Chrome也同时 支持这两个属性.
     如下:
 </p>
@@ -18,9 +18,31 @@ keywords: javascript,BOM,location,navigator
     var t = (typeof window.screenTop == 'number') ? window.screenTop : window.screenY;
     console.log(l,t);
 </pre>
+<p>
+    因为相对于屏幕边界的精确坐标不同,screenLeft和screenTop在各浏览器中取得的窗口左边上上边的值都不相同.
+    然而,使用moveTo()和moveBy()方法,可以将窗口精确的透支到一个新位置上,这两个方法
+   都 接收两个参数 ,<br>
+    moveTO()接收的是新位置的x和y坐标值,而moveBy()接收的是在水平各垂直向上移动的像素数.
+    如下:(高版本浏览器会默认禁止这个方法,只能对最外层的window对象使用)
 
-
-
+</p>
+<pre>
+    //将窗口移动到屏幕的左上角
+    window.moveTo(0,0);
+    //将窗向下移动100 像素
+    window.moveBy(0,100);
+    //将窗口移动到(200,300)
+    window.moveTo(200,300);
+    //将窗口向左移动50 像素
+    window.moveBy(-50,0);
+</pre>
+<h3>窗口大小</h3>
+<p>
+    跨浏览器确定一个窗口的大小不是一件简单的事,ie9+,f,s,o,c都为此提供了4个属性:
+    innerWidth,innerHeight,outerWidth,outerHeight.
+    在ie9+,s,f中,outerWidth和outerHeight返回浏览器窗口本身的尺寸.
+    在o中,这两个属性的值 表示页面视图容器(指o中单个标签面对应的浏览窗口)的大小.
+</p>
 
 
 
