--- a/_posts/2014-03-01-window.md
+++ b/_posts/2014-03-01-window.md
@@ -42,8 +42,24 @@ keywords: javascript,BOM,location,navigator
     innerWidth,innerHeight,outerWidth,outerHeight.
     在ie9+,s,f中,outerWidth和outerHeight返回浏览器窗口本身的尺寸.
     在o中,这两个属性的值 表示页面视图容器(指o中单个标签面对应的浏览窗口)的大小.
+    innerHeight,innerWidth 表示该容器中页面视图区的大小 (减去边框宽度).
+    在C中,outerHiehgt,outerWidth与innerwidth,innerHegith返回相同的值,
+    即视口(viewport)大小而非浏览器窗口大小.
 </p>
-
+<pre>
+    var pw = window.innerWidth,
+       ph = window.innerHeight;
+    console.log(pw,ph);
+    if(pw != 'number'){
+        if(document.compatMode == 'CSS1Compat'){//是否是标准模式
+            pw = document.documentElement.clientWidth;
+            ph = document.documentElement.clientHeight;
+        }else{
+            pw = document.body.clientWidth;
+            ph = document.body.clientHeight;
+        }
+    }
+</pre>
 
 
 
