--- a/_posts/2014-03-01-window.md
+++ b/_posts/2014-03-01-window.md
@@ -61,9 +61,18 @@ keywords: javascript,BOM,location,navigator
     }
 </pre>
 
+<h3>导航和打开窗口</h3>
+<p>
+    使用window.open()方法可以导航到一个特定的URL,也可以打开一个新的浏览器窗口,
+    这个方法可以接收4个参数:要加载的URL,窗口目标,一个特性字符串,一个表示 新页面是否取代
+    浏览器历史记录中当前加载页面的布尔值.
+    通常只须传递第一个参数,最后一个参数只在不打开新窗口的情况下使用.
 
-
-
+</p>
+<pre>
+    //等同于&lt;a href="www.diy1818.com" target = 'topF'&gt;&lt;/a&gt;
+    window.open('www.diy1818.com','topF');
+</pre>
 
 
 
