--- a/_posts/2014-03-01-window.md
+++ b/_posts/2014-03-01-window.md
@@ -73,13 +73,82 @@ keywords: javascript,BOM,location,navigator
     //等同于&lt;a href="www.diy1818.com" target = 'topF'&gt;&lt;/a&gt;
     window.open('www.diy1818.com','topF');
 </pre>
+<pre>
+    var w = window.open('http://www.diy1818.com','test','height=300,width=300,top=10,left=10,resizable=yes');
+   //调整大小
+   w.resizeTo(400,400);
+   //移动位置
+   w.moveTo(100,100);
+</pre>
+<p>
+    新创建的window对象有一个opener属性,其中保存着打开它的原始窗口对象.将opener
+    属性设置为null,就是告诉浏览器新创建的标签页不需要与打开它的标签页通信,
+    因此可以独立在进程中运行.标签页之间的联系一旦切断,将没有办法恢复.
+</p>
 
+<h3>间歇调用和超时调用 </h3>
+<p>
+    超时调用 需要使用 window对象的setTimeout()方法,它接收两个参数:
+    要执行的代码 和以毫秒表示的时间(即在执行代码前需要等待多少毫秒).
+    第一个参数可以是字符串也可以是函数,但建议使用函数,如下
+</p>
+<pre>
+    //设置超时调用
+  var timeoutId =  setTimeout(function(){
+        console.log('hello');
+    },1000)
 
+    //取消
+    clearTimeout(timeoutId);
+</pre>
+<p>
+    超时调用的代码都是在全局作用域中执行的,因此函数中this的值在非严格模式下指向
+    window对象,在严格模式下是undefined.
+</p>
+<p>
+    间歇调用会按照指定的时间间隔重复执行代码,直至间歇调用被取消或者页面被卸载.
+    其方法是setInterval(),如下:
+</p>
+<pre>
+     var num = 0;
+    var max = 10;
+    var intervalId = null;
+    function incrementNumber(){
+        num++;
+        console.log(num);
+        //如果执行次数达到了max设定的值,则取消后续尚未执行的调用
+        if(num == max){
+            clearInterval(intervalId);
+            alert('done');
+        }
 
+    }
 
+    intervalId = setInterval(incrementNumber,500);
+</pre>
 
-
-
+<p>
+    上面代码每半秒递增一次,当递增到最大值 就会取消先前设定的间歇调用.
+    也可以用超时调用 来实现,如下
+</p>
+<pre>
+    var num = 0;
+    var max = 10;
+    function incrementNumber(){
+        num++;
+        console.log(num);
+        //如果执行次数未到达max设定的值,则设置另一次超时调用
+        if(num < max){
+            setTimeout(incrementNumber,500);
+        }else{
+            alert('done');
+        }
+    }
+    setTimeout(incrementNumber,500);
+</pre>
+<p>
+    在超时调用中,不用跟踪调用 Id,一般认为,使用超时调用来模拟间歇调用是一种最佳模式.
+</p>
 
 
 
