--- a/_posts/2014-03-01-window.md
+++ b/_posts/2014-03-01-window.md
@@ -150,7 +150,58 @@ keywords: javascript,BOM,location,navigator
     在超时调用中,不用跟踪调用 Id,一般认为,使用超时调用来模拟间歇调用是一种最佳模式.
 </p>
 
+<h3>location对象</h3>
+<p>
+    location对象即是window对象的属性,也是document对象的属性,window.location和
+    document.location引用的是同一个对象.
+    location对象的用处不只表现在它保存着的当前 文件的信息,还表现在它将URL
+    解析为独立的片段,让开发人员可以通过不同的属性访问这些片段.
+</p>
 
-
-
+<table>
+    <tr>
+        <th>属性名</th>
+        <th>例子</th>
+        <th>说明</th>
+    <tr>
+        <td>location.hash</td>
+        <td>"#con"</td>
+        <td>返回URL中hash(#号后跟零或多个字符),如果URL中不包含散列,则返回空字符串</td>
+    </tr>
+    <tr>
+        <td>location.host</td>
+        <td>"www.diy1818.com:80"</td>
+        <td>返回服务器名称和端口号(如果有)</td>
+    </tr>
+    <tr>
+        <td>location.hostname</td>
+        <td>'www.diy1818.com'</td>
+        <td>返回不带端口号的服务器名称</td>
+    </tr>
+    <tr>
+        <td>location.href</td>
+        <td>'http://ww.diy1818.com'</td>
+        <td>返回当前加载页面的完整URL.而location对象的toString()方法也返回这个值</td>
+    </tr>
+    <tr>
+        <td>location.pathname</td>
+        <td>'/bild/'</td>
+        <td>返回URL中的目录和(或)文件名</td>
+    </tr>
+    <tr>
+        <td>location.port</td>
+        <td>'8080'</td>
+        <td>返回URL中指定的端口号,没有为空</td>
+    </tr>
+    <tr>
+        <td>location.protocol</td>
+        <td>'http:'</td>
+        <td>返回页面使用的协议</td>
+    </tr>
+    <tr>
+        <td>location.search</td>
+        <td>'?q=js&name=c'</td>
+        <td>返回URL的查询字符串,这个字符串以问号开头</td>
+    </tr>
+</table>
 
