--- a/_posts/2014-10-08-grunt.md
+++ b/_posts/2014-10-08-grunt.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: grunt
-description: 定义函数的方式有两种,一种是函数声明,一种是函数表达式.
-keywords: javascript,函数,表达示,声明.
+description: grunt 前端构建工具.
+keywords: grunt,nodejs.
 ---
 
 <h3>grunt package.json</h3>
