--- a/_posts/2016-01-13-fronted.md
+++ b/_posts/2016-01-13-fronted.md
@@ -7,7 +7,7 @@ keywords: javascript, html,css.
 
 
 <div class="entry-content clearfix">
-    <h2>前端之路</h2>
+    <h2>前端之路 ^_^</h2>
 
     <div class="favorites_box clearfix">
 
