--- a/_posts/2016-02-11-webpack01.md
+++ b/_posts/2016-02-11-webpack01.md
@@ -14,10 +14,10 @@ keywords: webpack.
 
 
 
-        <h3><a id="模块化开发" href="/favorites#模块化开发">模块化开发</a></h3>
+        <!--<h3><a id="模块化开发" href="/favorites#模块化开发">模块化开发</a></h3>-->
         <div class="group">
 
-
+            <pre>
             1.电脑全局安全
             npm install webpack -g
 
@@ -27,7 +27,7 @@ keywords: webpack.
             document.write("It works.");
 
             3.add  index.html , 如下：
-            <code>
+
                 <html>
                 <head>
                     <meta charset="utf-8">
@@ -36,7 +36,7 @@ keywords: webpack.
                 <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
                 </body>
                 </html>
-            </code>
+           
 
             接下来运行一下webpack
             webpack ./entry.js bundle.js
@@ -122,6 +122,8 @@ keywords: webpack.
             webpack --profile 输出性能数据，可以看到每一步的耗时
             webpack --display-modules 默认情况下 node_modules 下的模块会被隐藏，加上这个参数可以显示这些被隐藏的模块
             前面的四个命令比较基础，使用频率会比较大，后面的命令主要是用来定位打包时间较长的原因，方便改进配置文件，提高打包效率。
+
+            </pre>
         </div>
 
 
