--- a/_posts/2016-02-11-webpack01.md
+++ b/_posts/2016-02-11-webpack01.md
@@ -17,7 +17,7 @@ keywords: webpack.
         <!--<h3><a id="模块化开发" href="/favorites#模块化开发">模块化开发</a></h3>-->
         <div class="group">
 
-            <pre>
+            <pre class=" language-bash">
             1.电脑全局安全
             npm install webpack -g
 
@@ -27,6 +27,9 @@ keywords: webpack.
             document.write("It works.");
 
             3.add  index.html , 如下：
+                </pre>
+
+            <pre class="language-bash">
 
                 <html>
                 <head>
@@ -36,7 +39,8 @@ keywords: webpack.
                 <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
                 </body>
                 </html>
-           
+           </pre>
+            <pre>
 
             接下来运行一下webpack
             webpack ./entry.js bundle.js
