--- a/_posts/2017-02-13-IIFE.md
+++ b/_posts/2017-02-13-IIFE.md
@@ -1,11 +1,12 @@
 ---
 layout: post
 title: IIFE
-description: IIFE
-keywords: IIFE
+description: IIFE,javascript html css.
+keywords: IIFE.
 ---
 
-
+<div class="entry-content clearfix">
+	<h2>IIFE</h2>
 <div class="show-content">
 	<h2>一、IIFE解释</h2>
 	<blockquote><p>全拼Imdiately Invoked Function Expression，立即执行的函数表达式。</p></blockquote>
@@ -143,4 +144,5 @@ wall.log()
 	<p>&emsp;由于a.js文件的<code>wall.log()</code>少写了分号，跟b.js文件合并后，js就会认为‘wall.log()(...)’是需要这么执行的，结果代码就报错了。</p>
 
 
+</div>
 </div>
